Release Notes:
==============

JSIDPlay2:
- All shell-scripts and desktop files renamed to lower case without space in it's name for convenience
- splash screen removed
- New java based USB drivers implemented for:
  SIDBlaster, ExSID, ExSID+, HardSID4U, HardSID Uno and HardSID UPlay
  Supported platforms: Windows/Linux and MacOSX (MacOSX currently not working with HardSID devices)
- SID Recordings can now being watched and exported in a new recording view.
- Player control buttons reworked and rearranged

JSIDPlay2Server:
- Live videos: Now being controlled by web-page to watch demos better (insert the next disk, send keys, switch SID chip, etc.)
- Live videos: Now shows infos in a status bar
- Live videos: Scan bar-code to watch videos on your mobile phone

JSIDPlay2app:
- Connect USB hardware (SIDBlaster, ExSID, ExSID+, HardSID4U, HardSID Uno or HardSID UPlay) directly with a mobile device. No PC required.